force-app/main/default/objects/MessagingSession/fields/isHumanAgentAvailable__c.field-meta.xml
<CustomField>
    <fullName>isHumanAgentAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Human Agent is available</description>
    <label>isHumanAgentAvailable</label>
    <type>Checkbox</type>
</CustomField>