force-app/main/default/objects/MessagingSession/fields/Next_Requested_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Requested_Agent_Name__c</fullName>
    <description>This field holds the name of the next agent requested for the current session</description>
    <inlineHelpText>Name of the next agent requested</inlineHelpText>
    <label>Next Requested Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>