force-app/main/default/objects/MessagingSession/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>Email address of the user</description>
    <inlineHelpText>Email address of the user</inlineHelpText>
    <label>User Email</label>
    <type>Email</type>
</CustomField>