force-app/main/default/objects/MessagingSession/listViews/Fallback_Messaging_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Fallback_Messaging_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Fallback_Messaging</label>
    <queue>Fallback_Messaging</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>